--- a/web-front/package.json
+++ b/web-front/package.json
@@ -8,15 +8,23 @@
     "@fortawesome/fontawesome-free": "^6.3.0",
     "@fortawesome/free-solid-svg-icons": "^6.3.0",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "@material-ui/core": "^4.12.4",
+    "@material-ui/icons": "^4.11.3",
+    "@mui/core": "^5.0.0-alpha.54",
     "@mui/icons-material": "^5.11.11",
+    "@mui/lab": "^5.0.0-alpha.125",
     "@mui/material": "^5.11.16",
     "@mui/styles": "^5.11.16",
+    "@mui/system": "^5.11.16",
     "@mui/utils": "^5.11.13",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.3.5",
     "bootstrap": "^5.2.2",
+    "chart.js": "^4.2.1",
+    "chartjs-adapter-date-fns": "^3.0.0",
+    "date-fns": "^2.29.3",
     "rctx-contextmenu": "^1.4.1",
     "react": "^18.2.0",
     "react-agenda": "^0.0.8",
@@ -24,6 +32,8 @@
     "react-bootstrap": "^2.6.0",
     "react-bootstrap-buttons": "^1.0.0",
     "react-calendar": "^4.0.0",
+    "react-chartjs-2": "^5.2.0",
+    "react-datepicker": "^4.11.0",
     "react-dom": "^18.2.0",
     "react-drag-drop-files": "^2.3.9",
     "react-icons": "^4.8.0",
