--- a/web-front/package.json
+++ b/web-front/package.json
@@ -26,6 +26,7 @@
     "react-calendar": "^4.0.0",
     "react-dom": "^18.2.0",
     "react-drag-drop-files": "^2.3.9",
+    "react-dropzone": "^14.2.3",
     "react-icons": "^4.8.0",
     "react-router-dom": "^6.4.3",
     "react-scripts": "5.0.1",
