--- a/web-front/package.json
+++ b/web-front/package.json
@@ -25,6 +25,7 @@
     "chart.js": "^4.2.1",
     "chartjs-adapter-date-fns": "^3.0.0",
     "date-fns": "^2.29.3",
+    "query-string": "^8.1.0",
     "rctx-contextmenu": "^1.4.1",
     "react": "^18.2.0",
     "react-agenda": "^0.0.8",
